--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -10,32 +10,32 @@
       
         &--sm{
             padding-inline: var(--core-spacing-400);
-            height: 24px;
+            height: var(--core-size-1200);
             border-radius: var(--core-borderRadius-400);
             gap: var(--temp-static-spacing-4);
         }
         &--md{
             padding-inline: var(--core-spacing-600);
-            height: 32px;
+            height: var(--core-size-1600);
             border-radius: var(--core-borderRadius-600);
             gap: var(--temp-static-spacing-6);
         }
         &--lg{
             padding-inline: var(--core-spacing-800);
-            height: 48px;
+            height: var(--core-size-2400);
             border-radius: var(--core-borderRadius-800);
             gap: var(--temp-static-spacing-8);
         }
         &--xl{
             padding-inline: var(--core-spacing-1200);
-            height: 64px;
+            height: var(--core-size-3200);
             border-radius: var(--core-borderRadius-1200);
             gap: var(--temp-static-spacing-12);
         }
     }
     &__transform {
         transition-property: transform;
-        transition-duration: 160ms;
+        transition-duration: var(--core-motion-duration-200);
         transform: rotate(180deg);
         transition-timing-function: ease-in-out;
     }
