--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -5,15 +5,13 @@
     &__container{
         background-color: var(--core-color-solid-slate-50);
         border-radius: var(--core-borderRadius-400);
-        box-shadow: 0px 16px 24px 4px rgba(0, 0, 0, 0.02), 0px 16px 24px 4px rgba(0, 0, 0, 0.04);
+        box-shadow: var(--semantic-elevation-shadow-card-hover);
         display: flex;
-        min-width: 350px;
         padding: var(--core-spacing-400);
         flex-direction: column;
         align-items: flex-start;
         max-height: 258px;
         overflow-y: scroll;
-     
     }
     &__item{
         cursor: pointer ;
@@ -22,7 +20,7 @@
         align-items: center;
         gap: var(--core-spacing-400);
         align-self: stretch;
-        min-height: 48px;
+        min-height: var(--core-size-2400);
         
         border-radius: var(--core-borderRadius-200);
         &:hover{
@@ -35,8 +33,8 @@
     &__transition {
         &--enter {
             transform-origin: top;
-            animation-timing-function: cubic-bezier(0.72, 0, 0.24, 1);
-            animation-duration: 160ms;
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
         }
 
     }
