--- a/lib/components/tabs/tabs.scss
+++ b/lib/components/tabs/tabs.scss
@@ -1,9 +1,9 @@
 .tabs {
-    border-bottom: 2px solid var(--core-color-opacity-black-200);
+    border-bottom: var(--core-borderRadius-100) solid var(--core-color-opacity-black-200);
     display: inline-flex;
     align-items: center;
     &:active:not(:disabled){
-        border-bottom-color:2px solid var(--core-color-opacity-black-300);
+        border-bottom-color: var(--core-borderRadius-100) solid var(--core-color-opacity-black-300);
     }
     &:hover:not(:disabled){
         border-bottom-color: var(--core-color-opacity-black-600);
@@ -12,7 +12,7 @@
         opacity: var(--core-opacity-600);
     }
     &__selected-tab {
-        border-bottom: 2px solid var(--semantic-color-typography-prominent);
+        border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
     }
     &__variants {
         &--size {
