--- a/lib/components/Selection control/Checkbox/checkbox.scss
+++ b/lib/components/Selection control/Checkbox/checkbox.scss
@@ -1,3 +1,9 @@
+@import "../../../styles/index.scss";
+@import "../../../styles/quill.color.scss";
+@import "../../../styles/quill/spacing.scss";
+@import "../../../styles/quill/border.scss";
+@import "../../../styles/quill/others.scss";
+
 .quill-checkbox {
     display: inline-flex;
     position: relative;
@@ -18,13 +24,17 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        
+
         &:disabled {
             cursor: default;
         }
 
         &:hover:not(:disabled) ~ .quill-checkbox__box-icon {
-            fill: color-mix(in srgb, var(--semantic-color-typography-prominent) 72%, transparent);
+            fill: color-mix(
+                in srgb,
+                var(--semantic-color-typography-prominent) 72%,
+                transparent
+            );
         }
 
         &:active:not(:disabled) ~ .quill-checkbox__box-icon {
@@ -39,7 +49,7 @@
                 width: var(--size-generic-xs);
                 height: var(--size-generic-xs);
                 outline: var(--core-borderWidth-100) solid
-                var(--core-color-solid-blue-700);
+                    var(--core-color-solid-blue-700);
                 border-radius: var(--core-borderRadius-200);
                 position: absolute;
                 top: 52%;
@@ -54,11 +64,16 @@
         fill: var(--semantic-color-typography-prominent);
 
         &--pale {
-            fill: color-mix(in srgb, var(--semantic-color-typography-prominent) 48%, transparent)
+            fill: color-mix(
+                in srgb,
+                var(--semantic-color-typography-prominent) 48%,
+                transparent
+            );
         }
     }
 
-    &__label, &__info-icon {
+    &__label,
+    &__info-icon {
         cursor: pointer;
     }
 
@@ -69,7 +84,11 @@
     &--disabled {
         .quill-checkbox {
             &__box-icon {
-                fill: color-mix(in srgb, var(--semantic-color-typography-prominent) 24%, transparent);
+                fill: color-mix(
+                    in srgb,
+                    var(--semantic-color-typography-prominent) 24%,
+                    transparent
+                );
             }
 
             &__label {
@@ -78,7 +97,11 @@
             }
 
             &__info-icon {
-                fill: color-mix(in srgb, var(--semantic-color-typography-prominent) 24%, transparent);
+                fill: color-mix(
+                    in srgb,
+                    var(--semantic-color-typography-prominent) 24%,
+                    transparent
+                );
                 cursor: default;
             }
         }
