--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,5 +1,7 @@
 /* Global Styles */
 @import "./quill/color.semantic.scss";
+@import "./quill/color.scss";
+@import "./quill/opacity.scss";
 @import "./reset.scss";
 
 @at-root {
