--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -1,9 +1,18 @@
+@import '../../../styles/quill/spacing.scss';
+@import '../../../styles/quill/color.semantic.scss';
+@import '../../../styles/quill/border.scss';
+@import '../../../styles/quill/elevation.scss';
+@import '../../../styles/quill/spacing.scss';
+@import '../../../styles/quill/size.scss';
+@import '../../../styles/quill/motion.scss';
+
+
 .dropdown-menu {
     &__box{
-        padding-bottom:  var(--semantic-spacing-gap-sm);
+        padding-bottom:  var(--core-spacing-200);
     }
     &__container{
-        background-color: var(--core-color-solid-slate-50);
+        background-color: var(--semantic-color-background-primary-container);
         border-radius: var(--core-borderRadius-400);
         box-shadow: var(--semantic-elevation-shadow-card-hover);
         display: flex;
@@ -24,10 +33,10 @@
         
         border-radius: var(--core-borderRadius-200);
         &:hover{
-            background-color: var(--core-color-solid-slate-75);
+            background-color: var(--semantic-color-background-primary-base);
         }
         &--selected{
-            background-color: var(--core-color-solid-slate-100);
+            background-color: var(--semantic-color-background-primary-base);
         }
     }
     &__transition {
