--- a/lib/components/segmented-control/segmented-control.scss
+++ b/lib/components/segmented-control/segmented-control.scss
@@ -2,6 +2,7 @@
 @import "../../styles/quill/border.scss";
 @import "../../styles/quill/color.scss";
 @import "../../styles/quill/color.semantic.scss";
+@import "../../styles/quill/motion.scss";
 @import "../../styles/quill/opacity.scss";
 @import "../../styles/quill/others.scss";
 @import "../../styles/quill/spacing.scss";
@@ -24,13 +25,19 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
+            position: relative;
+            z-index: 2;
 
+            * {
+                z-index: 2;
+            }
             &.disabled {
                 opacity: var(--core-opacity-300);
                 cursor: not-allowed;
                 pointer-events: none;
             }
-            &.focused {
+            &.focused,
+            &.focused::before {
                 // not using default :focus since we are customizing focus state
                 box-shadow: 0 0 0 var(--borderWidth-xs)
                     var(--core-color-solid-blue-700) inset;
@@ -42,8 +49,9 @@
                     transparent
                 );
             }
-            &:active:not(.disabled) {
-                border: none;
+            &:active:not(.disabled),
+            &:active:not(.disabled)::before {
+                box-shadow: unset;
                 background: color-mix(
                     in srgb,
                     var(--semantic-color-typography-prominent) 16%,
@@ -53,13 +61,29 @@
             &.selected:not(.disabled) {
                 // colors should stay the same for both themes:
                 background: var(--core-color-solid-slate-50);
-
+            }
+            &.selected:not(.disabled),
+            &.animated {
+                // colors should stay the same for both themes:
                 * {
                     color: var(--core-color-solid-slate-1400);
                 }
                 svg {
                     fill: var(--core-color-solid-slate-1400);
                 }
+            }
+            &.animated::before {
+                content: "";
+                position: absolute;
+                background-color: var(--core-color-solid-slate-50);
+                width: 100%;
+                height: 100%;
+                animation: var(--core-motion-duration-200)
+                    var(--motion-easing-inandout) slide-in;
+                top: 0;
+                left: 0;
+                border-radius: inherit;
+                z-index: 1;
             }
             .icon {
                 display: flex;
@@ -117,5 +141,14 @@
                 border-radius: var(--core-borderRadius-600);
             }
         }
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        transform: translateX(var(--x));
+    }
+    100% {
+        transform: translateX(0);
     }
 }
