chore: fix styl

--- a/lib/components/action-sheet/handle-bar/handle-bar.scss
+++ b/lib/components/action-sheet/handle-bar/handle-bar.scss
@@ -11,7 +11,7 @@
     background-color: var(--core-color-solid-slate-50);
 
     @media (min-width: 1024px) {
-        display: hidden;
+        display: none;
     }
 
     &--line {
