--- a/lib/components/tabs/tabs.scss
+++ b/lib/components/tabs/tabs.scss
@@ -1,3 +1,11 @@
+@import '../../styles/quill/spacing.scss/';
+@import '../../styles/quill/color.semantic.scss';
+@import '../../styles/quill/border.scss';
+@import '../../styles/quill/spacing.scss';
+@import '../../styles/quill/size.scss';
+@import '../../styles/quill/opacity.scss';
+@import '../../styles/quill/color.opacity.scss';
+
 .tabs {
     border-bottom: var(--core-borderRadius-100) solid var(--core-color-opacity-black-200);
     display: inline-flex;
@@ -5,7 +13,7 @@
         border-bottom-color: var(--core-borderRadius-100) solid var(--core-color-opacity-black-300);
     }
     &:hover:not(:disabled){
-        border-bottom-color: var(--core-color-opacity-black-600);
+        border-bottom-color: var(--semantic-color-typography-default);
     }
     &:disabled{
         opacity: var(--core-opacity-600);
