chore: added aliases for quill styles

--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -1,5 +1,6 @@
-@import "../../styles/index.scss";
-@import "../../styles/quill.typhography.scss";
+
+
+@import '@quill-bundle/typhography.scss';
 
 
 $headings: hero, h1, h2, h3, h4, h5, h6;
