--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,5 +1,5 @@
 /* Global Styles */
-@import "./quill/color.semantic.scss";
+@import "@quill/color.semantic.scss";
 @import "./reset.scss";
 
 @at-root {
