--- a/lib/components/action-sheet/portal/portal.scss
+++ b/lib/components/action-sheet/portal/portal.scss
@@ -1,25 +1,92 @@
-.quill-action-sheet--portal {
-    position: fixed;
-    inset: var(--semantic-spacing-general-none);
-    transition: all var(--core-motion-duration-200) var(--core-motion-ease-400);
+@import "../../../styles/quill.scss";
 
-    &--wrapper {
-        pointer-events: none;
-        z-index: 50;
-        display: flex;
-        user-select: none;
-        align-items: flex-end;
-        justify-content: center;
-        overflow-x: hidden;
+.quill-action-sheet {
+    &--portal {
+        position: fixed;
+        inset: var(--semantic-spacing-general-none);
+        transition: all var(--core-motion-duration-200)
+            var(--core-motion-ease-400);
 
-        &[data-state="close"] {
-            visibility: hidden;
+        &--wrapper {
+            pointer-events: none;
+            z-index: 50;
+            display: flex;
+            user-select: none;
+            align-items: flex-end;
+            justify-content: center;
+            overflow-x: hidden;
+
+            &[data-state="close"] {
+                visibility: hidden;
+            }
+        }
+
+        &__variant--modal {
+            background-color: var(--core-color-opacity-black-500);
+            pointer-events: auto;
+            z-index: -10;
         }
     }
 
-    &__variant--modal {
-        background-color: var(--core-color-opacity-black-500);
+    &--root {
         pointer-events: auto;
-        z-index: -10;
+        box-shadow: var(--core-elevation-shadow-540);
+        touch-action: none;
+        position: relative;
+        z-index: 20;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        max-height: 90vh;
+        min-width: 320px;
+        max-width: 800px;
+        flex-direction: column;
+        overflow-y: auto;
+        border-top-left-radius: var(--semantic-borderRadius-lg);
+        border-top-right-radius: var(--semantic-borderRadius-lg);
+        background-color: var(--semantic-color-background-dialog);
+        padding-left: var(--semantic-spacing-general-md);
+        padding-right: var(--semantic-spacing-general-md);
+        padding-bottom: var(--semantic-spacing-general-md);
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 150ms;
+
+        @media (min-width: 1024px) {
+            max-width: 360px;
+            border-radius: var(--semantic-spacing-general-none);
+            max-height: 100vh;
+        }
+
+        &__position {
+            &--left {
+                &__show--false {
+                    visibility: hidden;
+                    transform: translateY(100%);
+
+                    @media (min-width: 1024px) {
+                        transform: translateX(-100%);
+                    }
+                }
+
+                @media (min-width: 1024px) {
+                    margin-left: var(--semantic-spacing-general-none);
+                }
+            }
+            &--right {
+                &__show--false {
+                    visibility: hidden;
+                    transform: translateY(100%);
+
+                    @media (min-width: 1024px) {
+                        transform: translateX(100%);
+                    }
+                }
+
+                @media (min-width: 1024px) {
+                    margin-right: var(--semantic-spacing-general-none);
+                }
+            }
+        }
     }
 }
