fix: added import classes

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./quill/color.semantic.scss";
 @import "./quill/color.scss";
 @import "./quill/opacity.scss";
+@import './quill//color.opacity.scss';
 @import "./reset.scss";
 
 @at-root {
