--- a/lib/components/Modal/Bottom/modal-bottom.scss
+++ b/lib/components/Modal/Bottom/modal-bottom.scss
@@ -1,12 +1,18 @@
 @import "../../../styles/quill.color.scss";
 @import "../../../styles/quill/border.scss";
 @import "../../../styles/quill/spacing.scss";
+@import "../../../styles/quill.animation.scss";
 
 .quill-modal-bottom {
     &__wrapper {
+        //TODO: check, if it will work in IOS
+        // position: fixed;
         position: absolute;
         left: 0;
+        right: 0;
         top: 0;
+        bottom: 0;
+        z-index: 9999;
         display: flex;
         height: 100%;
         width: 100%;
@@ -19,7 +25,7 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 45%;
+        min-height: 28.9rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -28,5 +34,31 @@
         border-top-left-radius: var(--core-borderRadius-800);
         border-top-right-radius: var(--core-borderRadius-800);
         padding: var(--semantic-spacing-general-lg);
+        opacity: var(--core-opacity-50);
+        transform: translateY(100%);
+        pointer-events: none;
+        transition:
+            transform var(--core-motion-duration-300)
+                var(--motion-easing-linear),
+            opacity var(--core-motion-duration-300) var(--motion-easing-linear);
+
+        &--visible {
+            opacity: var(--core-opacity-1300);
+            transform: translateY(0%);
+            pointer-events: auto;
+        }
+
+        &--expanded {
+            height: 90%;
+        }
     }
 }
+
+// TODO: remove if we don't need scroll blocker
+// body.modal--no-scroll {
+//     overflow: hidden;
+//     position: absolute;
+//     left: 0;
+//     height: 100vh;
+//     width: 100vw;
+// }
