--- a/lib/components/tabs/tabs.scss
+++ b/lib/components/tabs/tabs.scss
@@ -1,26 +1,31 @@
-@import '../../styles/quill/spacing.scss/';
-@import '../../styles/quill/color.semantic.scss';
-@import '../../styles/quill/border.scss';
-@import '../../styles/quill/spacing.scss';
-@import '../../styles/quill/size.scss';
-@import '../../styles/quill/opacity.scss';
-@import '../../styles/quill/color.opacity.scss';
+@import '@quill/spacing.scss/';
+@import '@quill/color.semantic.scss';
+@import '@quill/border.scss';
+@import '@quill/spacing.scss';
+@import '@quill/size.scss';
+@import '@quill/opacity.scss';
+@import '@quill/color.opacity.scss';
 
 .tabs {
     border-bottom: var(--core-borderRadius-100) solid var(--core-color-opacity-black-200);
     display: inline-flex;
-    &:active:not(:disabled){
+
+    &:active:not(:disabled) {
         border-bottom-color: var(--core-borderRadius-100) solid var(--core-color-opacity-black-300);
     }
-    &:hover:not(:disabled){
+
+    &:hover:not(:disabled) {
         border-bottom-color: var(--semantic-color-typography-default);
     }
-    &:disabled{
+
+    &:disabled {
         opacity: var(--core-opacity-600);
     }
+
     &__selected-tab {
         border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
     }
+
     &__variants {
         &--size {
             &-sm {
@@ -28,12 +33,13 @@
                 padding: var(--core-spacing-400) var(--core-spacing-200);
                 gap: var(--core-spacing-200);
             }
+
             &-md {
                 font-size: var(--core-font-size-100);
                 padding: var(--core-spacing-800) var(--core-spacing-600);
                 gap: var(--core-spacing-400);
             }
-           
+
         }
     }
 
