--- a/lib/components/Modal/Bottom/modal-bottom.scss
+++ b/lib/components/Modal/Bottom/modal-bottom.scss
@@ -15,11 +15,8 @@
         top: 0;
         bottom: 0;
         z-index: 9999;
-        display: flex;
         height: 100%;
         width: 100%;
-        align-items: center;
-        justify-content: center;
         background-color: var(--semantic-color-background-overlay);
     }
 
@@ -27,10 +24,10 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        min-height: 28.9rem;
+        // min-height: 28.9rem;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        align-items: stretch;
+        justify-content: space-evenly;
         flex-direction: column;
         background-color: var(--core-color-solid-slate-50);
         border-top-left-radius: var(--core-borderRadius-800);
@@ -67,11 +64,54 @@
 
     &__content {
         &-wrapper {
-            padding: var(--semantic-spacing-general-lg);
+            padding: 0 var(--semantic-spacing-general-lg)
+                var(--semantic-spacing-general-lg);
+            flex-grow: 1;
+
+            // &--has-image {
+            //     TODO
+            // }
         }
 
         &-title {
+            margin-top: var(--core-spacing-2200);
             margin-bottom: var(--semantic-spacing-general-lg);
+
+            &--has-image {
+                margin-top: var(--semantic-spacing-general-lg);
+            }
+        }
+    }
+
+    &__button {
+        display: flex;
+        height: 48px;
+        height: 48px;
+        padding: 12px 16px;
+        justify-content: center;
+        align-items: center;
+        align-self: stretch;
+        border-radius: 16px;
+
+        // TODO remove when button component will be merged
+        &-1 {
+            background: var(--core-color-solid-slate-1400);
+            color: var(--core-color-solid-slate-50);
+        }
+
+        &-2 {
+            border-radius: 16px;
+            border: 1px solid var(--core-color-solid-slate-1400);
+        }
+
+        &-wrapper {
+            align-self: stretch;
+            padding: var(--semantic-spacing-general-lg);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 8px;
         }
     }
 }
