--- a/lib/components/notification/notification.scss
+++ b/lib/components/notification/notification.scss
@@ -1,5 +1,6 @@
 @import "../../styles/quill/border.scss";
 @import "../../styles/quill/color.scss";
+@import "../../styles/quill/color.opacity.scss";
 @import "../../styles/quill/color.semantic.scss";
 @import "../../styles/quill/motion.scss";
 @import "../../styles/quill/opacity.scss";
@@ -31,15 +32,39 @@
             );
         background-color: var(--semantic-color-background-dialog);
 
+        .icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 32px;
+            height: 32px;
+            border-radius: var(--semantic-borderRadius-pill);
+
+            &.info {
+                background-color: var(--core-color-opacity-blue-100);
+            }
+            &.failure {
+                background-color: var(--core-color-opacity-red-100);
+            }
+            &.success {
+                background-color: var(--core-color-opacity-green-100);
+            }
+            &.warning {
+                background-color: var(--core-color-opacity-yellow-100);
+            }
+            &.close {
+                position: absolute;
+                width: 24px;
+                height: 24px;
+                right: 8px;
+                top: 8px;
+                border-radius: unset;
+            }
+        }
         .body {
             display: flex;
             align-items: center;
             gap: 16px;
-        }
-        .close-button {
-            position: absolute;
-            right: 16px;
-            top: 16px;
         }
     }
 }
