--- a/lib/components/SelectionControl/ToggleSwitch/toggle-switch.scss
+++ b/lib/components/SelectionControl/ToggleSwitch/toggle-switch.scss
@@ -1,3 +1,6 @@
+@import "@quill/color.scss";
+@import "@quill/color.opacity.scss";
+
 .toggle-switch {
     display: flex;
     align-items: center;
@@ -9,7 +12,6 @@
     border-radius: 18px;
     border-width: 2px;
     &.disabled .toggle-switch__slider {
-        opacity: 0.6;
         pointer-events: none;
         background: var(--core-color-opacity-black-200);
     }
@@ -24,7 +26,6 @@
         transition: background-color 0.3s ease;
         cursor: pointer;
         position: relative;
-        opacity: 1;
         &:hover:not(.disabled) {
             background-color: var(--core-color-opacity-black-300);
         }
@@ -47,11 +48,8 @@
 
         .toggle-switch__knob {
             position: absolute;
-            top: 2px;
             left: 2px;
-            width: 20px;
-            height: 20px;
-            border-radius: 16px;
+            top: -3.4px;
             transition:
                 left 0.3s ease,
                 background-color 0.3s ease;
@@ -60,7 +58,6 @@
             &.enabled {
                 left: 22px;
             }
-
             &.disabled {
                 fill: var(--core-color-opacity-white-400);
             }
